feat:parte F.A.Q del main

--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
           <!-- /jumbotron -->
 
           <!-- corpo pagina -->
-          <div class="row my-4 mx-2">
+          <div class="row my-4 mx-2 g-4">
+            <!-- parte prossime classi -->
             <div class="col-lg-8 ps-1">
               <div class="card">
                 <div class="card-header"><h3>Prossime classi</h3></div>
@@ -539,7 +540,89 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-8 order-lg-1">a</div>
+            <!-- /parte prossime classi -->
+
+            <!-- parte F.A.Q. -->
+            <div class="col-lg-8 order-lg-1 ps-1">
+              <div class="card" ">
+                <div class="card-header"><h3>F.A.Q.</h3></div>
+                <div class="p-3">
+                  <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collapseOne"
+                          aria-expanded="true"
+                          aria-controls="collapseOne"
+                        >
+                          Come aggiungere un nuovo studente
+                        </button>
+                      </h2>
+                      <div
+                        id="collapseOne"
+                        class="accordion-collapse collapse show"
+                        data-bs-parent="#accordionExample"
+                      >
+                        <div class="accordion-body">
+                         Clicca sul + il alto nella sezione blu.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collapseTwo"
+                          aria-expanded="false"
+                          aria-controls="collapseTwo"
+                        >
+                          Come posso accedere alle informazioni del mio account?
+                        </button>
+                      </h2>
+                      <div
+                        id="collapseTwo"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionExample"
+                      >
+                        <div class="accordion-body">
+                          Clicca sull'icona della campanella
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button
+                          class="accordion-button collapsed"
+                          type="button"
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collapseThree"
+                          aria-expanded="false"
+                          aria-controls="collapseThree"
+                        >
+                          Posso usare questa dashboard da mobile?
+                        </button>
+                      </h2>
+                      <div
+                        id="collapseThree"
+                        class="accordion-collapse collapse"
+                        data-bs-parent="#accordionExample"
+                      >
+                        <div class="accordion-body">
+                          Si, può essere usata.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- /parte F.A.Q. -->
+
             <div class="col-lg-4">a</div>
             <div class="col-lg-4 order-lg-1">a</div>
           </div>
