--- a/index.html
+++ b/index.html
@@ -623,7 +623,44 @@
             </div>
             <!-- /parte F.A.Q. -->
 
-            <div class="col-lg-4">a</div>
+            <!-- parte Todo -->
+            <div class="col-lg-4">
+              <div class="card" ">
+                        <div class="card-header">
+                          <h3>Todo</h3>
+                        </div>
+                      <div class="p-3">
+                        
+                          <div class="card" >
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item">
+                                <div class="form-check">
+                                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                  <label class="form-check-label" for="flexCheckDefault">
+                                    Kickoff nuove classi
+                                  </label>
+                                </div>
+                              </li>
+                              <li class="list-group-item"><div class="form-check">
+                                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                  <label class="form-check-label" for="flexCheckDefault">
+                                    Lezione su Bootstrap 5 in classe #75
+                                  </label>
+                                </div></li>
+                              <li class="list-group-item"><div class="form-check">
+                                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                  <label class="form-check-label" for="flexCheckDefault">
+                                    Controllare username github studenti
+                                  </label>
+                                </div></li>
+                            </ul>
+                          </div>
+                        
+                      </div>
+              </div>
+          </div>
+<!-- /parte Todo -->
+
             <div class="col-lg-4 order-lg-1">a</div>
           </div>
         </div>
