feat:stats quasi finite

--- a/index.html
+++ b/index.html
@@ -658,10 +658,24 @@
                         
                       </div>
               </div>
-          </div>
-<!-- /parte Todo -->
+            </div>
+            <!-- /parte Todo -->
 
-            <div class="col-lg-4 order-lg-1">a</div>
+            <div class="col-lg-4 order-lg-1">
+              <div class="card p-3" >
+                <div class="card" >
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                      <img class="img-fluid" src="img/stats.jpeg" alt="Stats">
+                      <h4>Utenti attivi</h4>
+                      <p class="fw-medium">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                    </li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <!-- /corpo pagina -->
