feat: cambio peso font corpo pagina

--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
         </div>
       </div>
     </header>
-
     <!-- /header -->
 
     <!-- main -->
@@ -149,7 +148,6 @@
             </li>
           </ul>
         </div>
-
         <!-- /sidebar -->
 
         <!-- corpo pagina -->
@@ -180,7 +178,6 @@
                     Piano blaze
                   </button>
                 </div>
-
                 <!-- /boolean piano blaze -->
 
                 <!-- parte apps -->
@@ -201,10 +198,9 @@
                     +
                   </button>
                 </div>
-
                 <!-- /parte apps -->
-              </div>
 
+              </div>
               <!-- parte boolean-apps -->
 
               <div class="col-12 col-sm-4 col-lg-2 offset-lg-2">
@@ -216,7 +212,7 @@
           <!-- /jumbotron -->
 
           <!-- corpo pagina -->
-          <div class="row my-4 mx-2 g-4">
+          <div class="row my-4 mx-2 g-4 fw-medium">
             <!-- parte prossime classi -->
             <div class="col-lg-8 ps-1">
               <div class="card">
@@ -549,9 +545,9 @@
                 <div class="p-3">
                   <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
-                      <h2 class="accordion-header">
+                      <h2 class="accordion-header ">
                         <button
-                          class="accordion-button"
+                          class="accordion-button fw-medium"
                           type="button"
                           data-bs-toggle="collapse"
                           data-bs-target="#collapseOne"
@@ -566,7 +562,7 @@
                         class="accordion-collapse collapse show"
                         data-bs-parent="#accordionExample"
                       >
-                        <div class="accordion-body">
+                        <div class="accordion-body fw-normal">
                          Clicca sul + il alto nella sezione blu.
                         </div>
                       </div>
@@ -574,7 +570,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button
-                          class="accordion-button collapsed"
+                          class="accordion-button collapsed fw-medium"
                           type="button"
                           data-bs-toggle="collapse"
                           data-bs-target="#collapseTwo"
@@ -589,7 +585,7 @@
                         class="accordion-collapse collapse"
                         data-bs-parent="#accordionExample"
                       >
-                        <div class="accordion-body">
+                        <div class="accordion-body fw-normal">
                           Clicca sull'icona della campanella
                         </div>
                       </div>
@@ -597,7 +593,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header">
                         <button
-                          class="accordion-button collapsed"
+                          class="accordion-button collapsed fw-medium "
                           type="button"
                           data-bs-toggle="collapse"
                           data-bs-target="#collapseThree"
@@ -612,7 +608,7 @@
                         class="accordion-collapse collapse"
                         data-bs-parent="#accordionExample"
                       >
-                        <div class="accordion-body">
+                        <div class="accordion-body fw-normal">
                           Si, può essere usata.
                         </div>
                       </div>
@@ -668,7 +664,7 @@
                     <li class="list-group-item">
                       <img class="img-fluid" src="img/stats.jpeg" alt="Stats">
                       <h4>Utenti attivi</h4>
-                      <p class="fw-medium">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                      <p >Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
                     </li>
                     <li class="list-group-item">A second item</li>
                     <li class="list-group-item">A third item</li>
