feat:parte stats

--- a/index.html
+++ b/index.html
@@ -657,6 +657,7 @@
             </div>
             <!-- /parte Todo -->
 
+            <!-- parte Stats -->
             <div class="col-lg-4 order-lg-1">
               <div class="card p-3" >
                 <div class="card" >
@@ -666,12 +667,16 @@
                       <h4>Utenti attivi</h4>
                       <p >Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
                     </li>
-                    <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
+                    <li class="list-group-item">Gennaio: 1200</li>
+                    <li class="list-group-item">Febbraio: 800</li>
+                    <li class="list-group-item">Marzo: 1500</li>
+                    <li class="list-group-item py-3"><a href="#">Visualizza report approfondito</a></li>
                   </ul>
                 </div>
               </div>
             </div>
+            <!-- /parte Stats -->
+            
           </div>
         </div>
         <!-- /corpo pagina -->
