feat:hover icone sidebar

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     <main class="">
       <div class="main-container d-flex">
         <!-- sidebar -->
-        <div class="sidebar ag-bg-blue py-4 px-4">
+        <div class="sidebar ag-bg-blue py-4 px-3">
           <ul class="h-100 list-unstyled d-flex flex-column">
-            <li class="justify-content-center my-1">
+            <li class="justify-content-center py-2 px-2">
               <a
                 href="#"
                 class="text-decoration-none text-white row align-items-center gx-4"
@@ -105,7 +105,7 @@
               >
             </li>
 
-            <li class="justify-content-center my-1">
+            <li class="justify-content-center  py-2 px-2">
               <a
                 href="#"
                 class="text-decoration-none text-white row align-items-center"
@@ -119,7 +119,7 @@
               >
             </li>
 
-            <li class="justify-content-center my-1">
+            <li class="justify-content-center  py-2 px-2">
               <a
                 href="#"
                 class="text-decoration-none text-white row align-items-center"
@@ -133,7 +133,7 @@
               >
             </li>
 
-            <li class="mt-auto justify-content-center">
+            <li class="mt-auto justify-content-center py-2 px-2">
               <a
                 href="#"
                 class="text-decoration-none text-white row align-items-center"
@@ -620,7 +620,7 @@
             <!-- /parte F.A.Q. -->
 
             <!-- parte Todo -->
-            <div class="col-lg-4">
+            <div class="col-lg-4   ps-1">
               <div class="card" ">
                         <div class="card-header">
                           <h3>Todo</h3>
@@ -658,7 +658,7 @@
             <!-- /parte Todo -->
 
             <!-- parte Stats -->
-            <div class="col-lg-4 order-lg-1">
+            <div class="col-lg-4 order-lg-1 ps-1">
               <div class="card p-3" >
                 <div class="card" >
                   <ul class="list-group list-group-flush">
@@ -676,7 +676,7 @@
               </div>
             </div>
             <!-- /parte Stats -->
-            
+
           </div>
         </div>
         <!-- /corpo pagina -->
