--- a/index.html
+++ b/index.html
@@ -74,9 +74,19 @@
                 ></a>
               </li>
               <li>
-                <a href="" class="text-decoration-none ag-txt-grey"
+                <div class="dropdown">
+                  <button class="btn border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a href="" class="text-decoration-none ag-txt-grey"
                   ><i class="fa-solid fa-bell ag-txt-orange"></i
                 ></a>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Profilo</a></li>
+                    <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                  </ul>
+                </div>
+                
               </li>
             </ul>
           </div>
@@ -214,7 +224,7 @@
           <!-- corpo pagina -->
           <div class="row my-4 mx-2 g-4 fw-medium">
             <!-- parte prossime classi -->
-            <div class="col-lg-8 ps-1">
+            <div class="col-lg-8 ">
               <div class="card">
                 <div class="card-header"><h3>Prossime classi</h3></div>
                 <div class="p-3">
@@ -539,7 +549,7 @@
             <!-- /parte prossime classi -->
 
             <!-- parte F.A.Q. -->
-            <div class="col-lg-8 order-lg-1 ps-1">
+            <div class="col-lg-8 order-lg-1 ">
               <div class="card" ">
                 <div class="card-header"><h3>F.A.Q.</h3></div>
                 <div class="p-3">
@@ -620,7 +630,7 @@
             <!-- /parte F.A.Q. -->
 
             <!-- parte Todo -->
-            <div class="col-lg-4   ps-1">
+            <div class="col-lg-4  ">
               <div class="card" ">
                         <div class="card-header">
                           <h3>Todo</h3>
@@ -658,7 +668,7 @@
             <!-- /parte Todo -->
 
             <!-- parte Stats -->
-            <div class="col-lg-4 order-lg-1 ps-1">
+            <div class="col-lg-4 order-lg-1 ">
               <div class="card p-3" >
                 <div class="card" >
                   <ul class="list-group list-group-flush">
