feat: posizionamento box corpo pagina

--- a/index.html
+++ b/index.html
@@ -323,8 +323,10 @@
 
           <!-- corpo pagina -->
           <div class="row my-4 mx-2 g-4 fw-medium">
-            <!-- parte prossime classi -->
+
             <div class="col-lg-8 ">
+              <!-- parte prossime classi -->
+            <div class="mb-4" >
               <div class="card">
                 <div class="card-header"><h3>Prossime classi</h3></div>
                 <div class="p-3">
@@ -649,7 +651,7 @@
             <!-- /parte prossime classi -->
 
             <!-- parte F.A.Q. -->
-            <div class="col-lg-8 order-lg-1 ">
+            <div >
               <div class="card" ">
                 <div class="card-header"><h3>F.A.Q.</h3></div>
                 <div class="p-3">
@@ -729,8 +731,12 @@
             </div>
             <!-- /parte F.A.Q. -->
 
-            <!-- parte Todo -->
+            </div>
+            
+
             <div class="col-lg-4  ">
+              <!-- parte Todo -->
+            <div class="mb-4" >
               <div class="card" ">
                         <div class="card-header">
                           <h3>Todo</h3>
@@ -768,7 +774,7 @@
             <!-- /parte Todo -->
 
             <!-- parte Stats -->
-            <div class="col-lg-4 order-lg-1 ">
+            <div >
               <div class="card p-3" >
                 <div class="card" >
                   <ul class="list-group list-group-flush">
@@ -787,6 +793,8 @@
             </div>
             <!-- /parte Stats -->
 
+            </div>
+            
           </div>
         </div>
         <!-- /corpo pagina -->
